something chnages in code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://surajkushwaha12.github.io/Portfolio_website/Home">Contact
+                    <a class="nav-link" target="_blank" href="https://harshit963.github.io/Portfolio_Website/Responsive%20Portfolio%20Website/">Contact
                         Me</a>
                 </li>
 
@@ -57,16 +57,16 @@
                 This PinCode system for identifying postal region by using unique code called, PinCode</p>
             <a class="btn btn-primary btn-lg" role="button" onclick="moreText()">Learn more</a>
             <div class="social-sect ">
-                <a href="https://www.linkedin.com/in/suraj-kushwaha-b399201a9/" target="_blank">
+                <a href="https://www.linkedin.com/in/harshit-pal-680403203/" target="_blank">
                     <i class="fa fa-linkedin"></i>
                 </a>
-                <a href="mailto:surajkushwaha8272@gmail.com">
+                <a href="mailto:harshit3072@gmail.com">
                     <i class="fa fa-envelope"></i>
                 </a>
-                <a href="https://github.com/Surajkushwaha12" target="_blank">
+                <a href="https://github.com/harshit963" target="_blank">
                     <i class="fa fa-github"></i>
                 </a>
-                <a href="https://www.instagram.com/suraj_kushwahass/" target="_blank">
+                <a href="https://www.instagram.com/harshitpal20/" target="_blank">
                     <i class="fa fa-instagram"></i>
                 </a>
             </div>
